crates/pardosa-schema/tests/compile_fail/phantomdata_field.rs
use pardosa_schema::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    marker: core::marker::PhantomData<u32>,
}

fn main() {}
