crates/pardosa-schema/tests/compile_fail/phantomdata_field.stderr
error[E0277]: the trait bound `PhantomData<u32>: GenomeSafe` is not satisfied
 --> tests/compile_fail/phantomdata_field.rs:5:13
  |
5 |     marker: core::marker::PhantomData<u32>,
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `GenomeSafe` is not implemented for `PhantomData<u32>`
  |
  = help: the following other types implement trait `GenomeSafe`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
            (T0, T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others

error[E0277]: the trait bound `PhantomData<u32>: Encode` is not satisfied
 --> tests/compile_fail/phantomdata_field.rs:3:10
  |
3 | #[derive(GenomeSafe)]
  |          ^^^^^^^^^^ the trait `Encode` is not implemented for `PhantomData<u32>`
  |
  = help: the following other types implement trait `Encode`:
            &[u8]
            &str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
  = note: this error originates in the derive macro `GenomeSafe` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PhantomData<u32>: Decode` is not satisfied
 --> tests/compile_fail/phantomdata_field.rs:5:13
  |
5 |     marker: core::marker::PhantomData<u32>,
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Decode` is not implemented for `PhantomData<u32>`
  |
  = help: the following other types implement trait `Decode`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
